test: add tests for restcontroller - Started on restapplication tests but did not work - finished testing restcontroller
Co-authored-by: Mats Kvanvik <matskva@stud